adding publications and research

--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,5 @@ title: "About me"
 ---
 
 I am a PhD Candidate in the Department of Statistics at Colorado State University.
-My research interests are in spatial statistics and Bayesian statistics,
+My [research](research.html) interests are in spatial statistics and Bayesian statistics,
 in particular for applications in ecology and environmental science.
-Thanks for visiting my website!
