--- a/index.Rmd
+++ b/index.Rmd
@@ -2,6 +2,7 @@
 title: "About me"
 ---
 
-I am a PhD Candidate in the Department of Statistics at Colorado State University.
+I am an assistant professor in the Department of Statistics at the University of Missouri.
+I joined MU in the Fall of 2024 after completing my PhD at Colorado State University.
 My [research](research.html) interests are in spatial statistics and Bayesian statistics,
 in particular for applications in ecology and environmental science.
