--- a/index.Rmd
+++ b/index.Rmd
@@ -6,3 +6,9 @@ I am an assistant professor in the Department of Statistics at the University of
 I joined MU in the Fall of 2024 after completing my PhD at Colorado State University.
 My [research](research.html) interests are in spatial statistics and Bayesian statistics,
 in particular for applications in ecology and environmental science.
+
+## Recent news
+
+New paper accepted in *Biometrics*:
+
+- **WJ Wright** and MB Hooten (2024) Continuous-space occupancy models. *Biometrics*, Accepted.
