--- a/index.Rmd
+++ b/index.Rmd
@@ -8,6 +8,10 @@ in particular for applications in ecology and environmental science.
 
 ## Recent news
 
+New paper accepted in *The Annals of Applied Statistics*:
+
+  - **WJ Wright**, PN Neitlich, and MB Hooten (2025) Clipped multiscale scale processes for multivariate vegetation data. *The Annals of Applied Statistics*.
+
 New Methodology Discussion paper published in *Biometrics*:
 
 - **WJ Wright** and MB Hooten (2025) [Continuous-space occupancy models.](https://doi.org/10.1093/biomtc/ujaf055) *Biometrics*, 81(2): ujaf055.
