--- a/publications.Rmd
+++ b/publications.Rmd
@@ -2,7 +2,7 @@
 title: "Publications"
 ---
 
-- **WJ Wright**, PN Neitlich, and MB Hooten (2025) Clipped multiscale scale processes for multivariate vegetation data. *The Annals of Applied Statistics*.
+- **WJ Wright**, PN Neitlich, and MB Hooten (2025) Clipped multiscale spatial processes for multivariate vegetation data. *The Annals of Applied Statistics*.
 
 - **WJ Wright** and MB Hooten (2025) [Rejoinder to the discussion on "Continuous-space occupancy models."](https://doi.org/10.1093/biomtc/ujaf058) *Biometrics*, 81(2): ujaf058.
 
